2006-06-06  Albert Chu <chu11@llnl.gov>

	* Document workaround notes to in-band tools about IBM e325.
	
2006-06-05  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus-interface.c
	(_construct_session_trlr_authentication_code): Fix MD5 hashing bug.
	
2006-05-26  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Make bmc-watchdog init.d non-replaceable if
	modified.
	
2006-05-25  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Security modifications added.
	
2006-05-24  Albert Chu <chu11@llnl.gov>

	* ipmipower/, libfreeipmi/: Several security modifications added.

	* libfreeipmi/src/ipmi-locate-acpi-spmi.c
	(ipmi_acpi_get_firmware_table): Fix double free bug. 

	* Fix gcc warnings.
	
2006-05-22  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-locate-acpi-spmi.c
	(ipmi_acpi_get_spmi_table): Fix logic bug.

	* libfreeipmi/src/fiid.c (fiid_obj_clear, fiid_obj_clear_field):
	Implement with guaranteed memset.

	* libfreeipmi/src/freeipmi.map: New file.

	* libfreeipmi/src/Makefile.am, configure.ac: Hide non-API symbols.

	* common/src/Makefile.am: Fix build as necessary.
	
2006-05-19  Albert Chu <chu11@llnl.gov>

	* bmc-watchdog/src/Makefile.am, bmc-watchdog/src/bmc-watchdog.c:
	Adjust for changes from 05-18-06.

	* libfreeipmi/src/ipmi-locate-smbios.c (ipmi_smbios_reg_space):
	EINVAL return rather than exit.
	
2006-05-18  A Balamurugan  <bala@zresearch.com>

	* bmc-watchdog/Makefile.am, fish/src/Makefile.am,
	libfreeipmi/Makefile.am, libfreeipmi/src/Makefile.am,
	libfreeipmi/src/ipmi-semaphores.h: Fix of hardcoded paths of some
	files.  Thanks for the patch to Claudio Fontana
	<sick_soul@yahoo.it>.

2006-05-16  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Add version to changelog.
	
2006-05-15  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Updated with changes from Ben Woodard (woodard
	at redhat dot com) for Fedora inclusion.

	* freeipmi.spec.in: Cleaned up some english and updated with
	changes since 0.2.0.
